--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -92,7 +92,7 @@
                     </tr>
                 </thead>
                 <tbody id="tableBody">
-                    <!-- Table rows will be added dynamically -->
+                    <!-- Table rows will added here -->
                 </tbody>
             </table>
         </div>
